--- a/templates/index.html
+++ b/templates/index.html
@@ -50,16 +50,16 @@
         <div class="ai-box">
             <h4>OpenAI</h4>
             <div class="ai-chat" id="openaiChat"></div> 
-            <select name="" id="openaiModel"style="margin-bottom: 10px;">
+            <!--<select name="" id="openaiModel"style="margin-bottom: 10px;">
                 {% for model in openai_models %}
                  <option value="{{model}}">{{model}}</option>
                 {% endfor %}
-            </select> 
+            </select>  -->
             <input class="ai-input" id="openaiInput" placeholder="Повідомлення для OpenAI">
             <button onclick="sendSingle('openai')">Надіслати</button>
         </div>
 
-        <!-- Groq -->
+        <!-- Groq
         <div class="ai-box">
             <h4>Groq</h4>
             <div class="ai-chat" id="groqChat"></div> 
@@ -70,17 +70,17 @@
                 </select> 
             <input class="ai-input" id="groqInput" placeholder="Повідомлення для Groq">
             <button onclick="sendSingle('groq')">Надіслати</button>
-        </div>
+        </div> -->
 
         <!-- Gemini -->
         <div class="ai-box">
             <h4>Gemini</h4>
             <div class="ai-chat" id="geminiChat"></div> 
-            <select name="" id="geminiModel" style="margin-bottom: 10px;">
+            <!--<select name="" id="geminiModel" style="margin-bottom: 10px;">
                 {% for model in gemini_models %}
                  <option value="{{model}}">{{model}}</option>
                 {% endfor %}
-                </select>  
+                </select>  -->
             <input class="ai-input" id="geminiInput" placeholder="Повідомлення для Gemini">
             <button onclick="sendSingle('gemini')">Надіслати</button>
         </div>
